:sparkles: 更新框架，新增 cached_query_url